--- a/packages/product-service/package.json
+++ b/packages/product-service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "api",
+  "name": "product-service",
   "version": "0.1.0",
-  "description": "API for bid",
+  "description": "Product Service",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
