--- a/packages/product-service/package.json
+++ b/packages/product-service/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "graphql": "^0.12.3",
-    "graphql-yoga": "^0.4.3"
+    "graphql-yoga": "^0.4.3",
+    "mongoose": "^4.13.7",
+    "redis": "^2.8.0"
   }
 }
