--- a/packages/product-service/Dockerfile
+++ b/packages/product-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:alpine
 
-WORKDIR /usr/src/app
+WORKDIR /usr/app
 
 # Copy over package.json & package-lock.json
 COPY package*.json ./
@@ -8,5 +8,4 @@ RUN npm install
 
 COPY . .
 EXPOSE 8080
-RUN npm start
 
