got redis to finally attach properly over docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,9 @@ services:
     build: ./packages/product-service
     ports:
      - "8080:8080"
-    depends_on:
-      - cache
     command: npm start
+    links:
+      - redis
 
-  cache:
-    build: ./packages/cache
-    ports:
-      - 6379
+  redis:
+    image: "redis:alpine"
