--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.2",
     "chromedriver": "^2.34.0",
     "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "selenium-webdriver": "^3.6.0"
   }
 }
